test/files/neg/t5882.scala
class NodeOps(val n: Any) extends AnyVal {
  case class Scope
  class Foo
  object Bar
}
